kubernetes/podinfo/istio/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  labels:
    app.kubernetes.io/name: podinfo
    app.kubernetes.io/managed-by: manual
  name: podinfo-dr
spec:
  host: podinfo
  subsets:
    - labels:
        app.kubernetes.io/track: stable
      name: stable
    - labels:
        app.kubernetes.io/track: canary
      name: canary
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    tls:
      mode: ISTIO_MUTUAL
